--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "react": "18.2.0",
-    "react-native": "0.71.1",
-    "react-native-rename": "^3.2.12"
+    "react-native": "0.71.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
