--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -26,7 +26,7 @@ jobs:
       run: yarn install
 
     - name: Build APK
-      run: npx react-native run-android --variant=release
+      run: chmod +x android/gradlew && npx react-native run-android --variant=release
 
     - name: Upload APK to GitHub Release
       uses: actions/upload-artifact@v2
