--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Bundle *.aap & *.apk
-        run: cd android && chown +x gradlew && ./gradlew bundleRelease assembleRelease
+        run: cd android && chmod +x gradlew && ./gradlew bundleRelease assembleRelease
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
