--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,38 +1,50 @@
-name: Android Build & Deploy
- 
-on:
- workflow_dispatch:
- 
+name: Build Android & iOS
+
+on: 
+  workflow_dispatch:
+
 jobs:
- deploy:
-   runs-on: ubuntu-latest
-   steps:
-   - uses: actions/checkout@v2
- 
-   - name: Define version code with offset
-     env:
-         RUN_NUMBER: ${{ github.run_number }}
-         INITIAL_VERSION_CODE: 1
-     run: |
-         VERSION_CODE=$((INITIAL_VERSION_CODE + RUN_NUMBER))
-         echo "version_code=$VERSION_CODE" >> $GITHUB_ENV
- 
-   - name: Update version code
-     uses: chkfung/android-version-actions@v1.1
-     with:
-       gradlePath: android/app/build.gradle
-       versionCode: ${{ env.version_code }}
-       
-   - name: Build & deploy Android release
-     uses: ruby/setup-ruby@v1
-     with:
-        bundler-cache: true
-        ruby-version: "2.7.6"  
-        run: bundle install && bundle update --ruby && bundle exec fastlane android
- 
-   - name: Upload build artifacts
-     uses: actions/upload-artifact@v2
-     with:
-       name: assets
-       path: |
-         ${{ github.workspace }}/app/build/outputs/bundle/release
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install node dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Bundle *.aap & *.apk
+        run: cd android && chmod +x gradlew && ./gradlew clean && ./gradlew bundleRelease assembleRelease
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: Apk
+          path: android/app/build/outputs/apk/release/app-release.apk
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: Aab
+          path: android/app/build/outputs/bundle/release/app-release.aab
